# lsi-stroke-calculator

./: .gitignore  README.md  pyproject.toml  run_all.sh
data/: final_data.parquet  merged_data.parquet
data/raw/: .gitignore  README.md
models/: best_rf_stroke_merged.model
src/dash/: app.py
src/notebooks/100_transforms/: 100_sas_to_parquet.ipynb  110_merge_datasets.ipynb  120_data_cleaning.ipynb
src/notebooks/200_models/: 200_random_forest.ipynb
src/notebooks/zzz_trash/: information_gain.ipynb
